--- a/guess.html
+++ b/guess.html
@@ -11,7 +11,7 @@
 
 <body bgcolor="black" align="center">
     <h1>Guess the Number</h1>
-    <h2> We have selected a random number between 1 and 100. See if you can guess it in 10 turns or fewer.<br /> We'll
+    <h2> A random number is selected between 1 and 100. See if you can guess it in 10 turns or fewer.<br /> We'll
         tell you if your guess was too high or too low.
     </h2>
     <h2>No of guesses left : </h2>
