--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="underline"></div>
       </div>
       <div class="input-box">
-        <input type="password" placeholder="Enter Your Password" required>
+        <input type="password" placeholder="Enter Your Password" minlength="8" required>
         <div class="underline"></div>
       </div>
       <div class="input-box button">
